--- a/src/main/webapp/app/partials/join-quiz-form.html
+++ b/src/main/webapp/app/partials/join-quiz-form.html
@@ -1,5 +1,4 @@
-<p>This is the partial for view 2.</p>
-<p>
-  Showing of 'interpolate' filter:
-  {{ 'Current version is v%VERSION%.' | interpolate }}
-</p>
+<div class="span4">&nbsp;</div>
+<div class="span8">
+    <p>This is the partial for view 2.</p>
+</div>
