--- a/src/main/webapp/app/partials/quizzes.html
+++ b/src/main/webapp/app/partials/quizzes.html
@@ -1,17 +1,27 @@
-<b>Filter:</b>
-<input type="text" ng-model="myfilter" /><br/>
+<div class="container">
+    <div class="row">
+        <div class="span3">
+          <h3>Filter</h3>
+          <input type="text" ng-model="myfilter" />
+        </div>
+        <div class="span9">
+            <h2>Quizzes</h2>
+            <table id="quizzes">
+                <tr>
+                    <th>Quiz</th>
+                    <th>Description</th>
+                    <th>Action</th>
+                </tr>
+                <tr class="quizzes"
+                    ng-repeat='quiz in quizzes | filter: myfilter | orderBy: name'>
+                    <td>{{quiz.name}}</td>
+                    <td>{{quiz.description}}</td>
+                    <td><a href="#/quiz/{{quiz.id}}">Select Quiz</a></td>
+                </tr>
+            </table>
+        </div>
+    </div>
 
-<table id="quizzes">
-	<tr>
-		<th>Quiz</th>
-		<th>Description</th>
-		<th>Action</th>
-	</tr>
-	<tr class="quizzes" 
-	    ng-repeat='quiz in quizzes | filter: myfilter | orderBy: name'>
-		<td>{{quiz.name}}</td>
-		<td>{{quiz.description}}</td>
-		<td><a href="#/quiz/{{quiz.id}}">Select Quiz</a></td>
-	</tr>
-</table>
 
+
+</div>
