--- a/src/main/webapp/WEB-INF/views/quizzes/show.jspx
+++ b/src/main/webapp/WEB-INF/views/quizzes/show.jspx
@@ -4,8 +4,8 @@
     <jsp:output omit-xml-declaration="yes"/>
     <page:show id="ps_com_chariot_quizzo_model_Quiz" object="${quiz}" path="/quizzes" z="5UTml6oqpuRFD8iRICBC6WgJMJI=">
         <field:display field="name" id="s_com_chariot_quizzo_model_Quiz_name" object="${quiz}" z="sYJJk+cuexAkEfXPZDJYXIh8Pzo="/>
-        <field:display field="short_name" id="s_com_chariot_quizzo_model_Quiz_short_name" object="${quiz}" z="/ZdTGiI4Mlq0yuvUnTnqgzO8Luw="/>
         <field:display field="description" id="s_com_chariot_quizzo_model_Quiz_description" object="${quiz}" z="VPdCInbL4VX/iB3LICQAfxObV4A="/>
         <field:display field="players" id="s_com_chariot_quizzo_model_Quiz_players" object="${quiz}" z="9kUNmHGerQjFpIdBW4V0985XmSk="/>
+        <field:display field="shortName" id="s_com_chariot_quizzo_model_Quiz_shortName" object="${quiz}" z="HebTQsMEzGHPkb+86n/ld2OsCW4="/>
     </page:show>
 </div>
