refactoring controller names and dropping old testss

--- a/src/main/webapp/app/partials/quiz_form.html
+++ b/src/main/webapp/app/partials/quiz_form.html
@@ -1,7 +1,7 @@
 
 <form name="quizForm"
         class="quizzo-angular-form"
-        ng-controller="QuizFormCtrl"
+        ng-controller="QuizFormController"
        >
     <caption>Enter Quiz</caption>
     <fieldset>
