--- a/src/main/webapp/WEB-INF/views/quizzes/list.jspx
+++ b/src/main/webapp/WEB-INF/views/quizzes/list.jspx
@@ -7,8 +7,7 @@
         <table:table data="${quizzes}" id="l_com_chariot_quizzo_model_Quiz" path="/quizzes" z="QEZk04zvhc+te5/6K6LZAhjNPjw=">
             <table:column id="c_com_chariot_quizzo_model_Quiz_name" property="name" z="E2VvSgEtcIaY6RJBD41CuzbPI4k="/>
             <table:column id="c_com_chariot_quizzo_model_Quiz_description" property="description" z="pxZ3/MDEtXnnFGw5kspcncv0W9w="/>
-            <table:column id="c_com_chariot_quizzo_model_Quiz_players" property="players" z="/rL3pPemRCF/Z8PUqRpfPmdD+sw="/>
-            <table:column id="c_com_chariot_quizzo_model_Quiz_shortName" property="shortName" z="qeTP1vx0OYbqfXXGbMPlc/pL5eM="/>
+            <table:column id="c_com_chariot_quizzo_model_Quiz_questions" property="questions" z="qr7RJt4ELa3w+VhXn1qB96Qr9YA="/>
         </table:table>
     </page:list>
 </div>
